--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.2",
-    "react": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -20,7 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
