--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.8",
     "next": "^14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18.3.0",
     "react-dom": "^18",
     "react-router-dom": "^6.23.0",
@@ -23,9 +25,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
